# afc-dut-test

./: .cursorrules  .gitignore  README.md  TESTPLAN.md  conftest.py  pyproject.toml
afc-server-simulator/: main.py
afc-server-simulator/test_vectors/: AFCD_USA_1.json  AFCD_USA_3.json  rsa_1.json
configs/: test.toml
scripts/: test_vectors_to_json.py
tests/rsa/: test_01_frequency.py
utils/: afc.py  dut.py  logger.py  rf.py
